--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<header class="hero is-danger">
+  <section class="hero-body">
+    <h1 class="title">Tareas de hoy</h1>
+    <p class="subtitle">Aplicación de tareas hecha con Angular y Bulma CSS</p>
+  </section>
+</header>
 <main>
-  <header>
-    <h1>To-Do App</h1>
-  </header>
-
   <todo-container></todo-container>
 </main>
