--- a/src/styles.css
+++ b/src/styles.css
@@ -1,28 +1,1 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  font: inherit;
-}
-
-html {
-  color-scheme: light dark;
-}
-
-body {
-  min-height: 100vh;
-  font-family: system-ui;
-}
-
-img,
-picture,
-svg,
-video {
-  display: block;
-  max-width: 100%;
-}
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
