--- a/src/app/todo/components/todo-form/todo-form.component.css
+++ b/src/app/todo/components/todo-form/todo-form.component.css
@@ -1,14 +1,3 @@
-.description-group {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-form {
-  display: flex;
-  flex-flow: column wrap;
-  max-width: 22rem;
-  justify-content: center;
-  align-items: center;
+.todo-form-container {
+  margin: 1rem 0;
 }
