--- a/src/app/todo/components/todo-list/todo-list.component.css
+++ b/src/app/todo/components/todo-list/todo-list.component.css
@@ -1,8 +1,33 @@
-.completed {
-  text-decoration: dashed;
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 3rem;
+  border-radius: 10px;
+  background-color: #333;
+  width: 100%;
+  color: #fff;
+  margin: 1rem 0;
 }
 
-button {
-  background-color: red;
-  color: #fff;
+li > p {
+  font-size: 2.5ex;
+  font-weight: bold;
+}
+
+div > p {
+  text-align: center;
+}
+
+.todo-btns {
+  width: 35%;
+  max-width: 14em;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.todo-list-container {
+  height: 30vh;
+  margin: 1rem 0;
 }
