Added attributes and refactoring

--- a/src/app/todo/components/todo-form/todo-form.component.html
+++ b/src/app/todo/components/todo-form/todo-form.component.html
@@ -1,22 +1,21 @@
 <section class="todo-form-container">
   <form [formGroup]="todoForm" autocomplete="off" (ngSubmit)="onSubmit()">
     <div class="field">
-      <label class="label" for="description">Ingresa la descripción de la tarea</label>
+      <label class="label" for="inputDescriptionTodo">Ingresa la descripción de la tarea</label>
       <section class="control">
         <input
           class="input"
           type="text"
-          id="description"
+          id="inputDescriptionTodo"
           formControlName="description"
           placeholder="Buy some eggs"
-          #input
-        />
+          #input/>
       </section>
     </div>
 
-    <section class="field is-flex is-flex-wrap-wrap is-justify-content-space-between	is-align-items-center">
-      <button class="button is-primary" type="submit" [disabled]="input.value.length === 0">Añadir tarea</button>
-      <button class="button is-danger" type="button" [disabled]="dataList.length <= 0" (click)="deleteAllTask()">
+    <section class="field form-buttons-container">
+      <button class="button is-primary" type="submit" id="btnAddTodo" [disabled]="input.value.length === 0">Añadir tarea</button>
+      <button class="button is-danger" type="button" id="btnClearTodos" [disabled]="dataList.length <= 0" (click)="deleteAllTask()">
         Limpiar lista
       </button>
     </section>
