--- a/src/app/todo/components/todo-form/todo-form.component.css
+++ b/src/app/todo/components/todo-form/todo-form.component.css
@@ -1,3 +1,12 @@
 .todo-form-container {
   margin: 1rem 0;
 }
+
+.form-buttons-container {
+  display: flex;
+  justify-content: center;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
