--- a/src/app/todo/components/todo-list/todo-list.component.css
+++ b/src/app/todo/components/todo-list/todo-list.component.css
@@ -1,13 +1,13 @@
-li {
+.todo-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 3rem;
+  padding: 1rem 2.5rem;
   border-radius: 10px;
   background-color: #333;
   width: 100%;
   color: #fff;
-  margin: 1rem 0;
+  margin: 1.8rem 0;
 }
 
 li > p {
